--- a/scss/_bet-lists.scss
+++ b/scss/_bet-lists.scss
@@ -129,6 +129,9 @@ ul.bet-list-esports{
         .value{
           margin: 0 0 0 .4rem;
         }
+        .name{
+          text-align: left;
+        }
       }
     }
     &:last-child{
